--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -15,7 +15,7 @@
   <li>добавлен новый источник обоев Eath Shots (обновление днем)</li>
   <li>изменен порядок отображения картинок в галерее (последние первыми)</li>
   <li>галерея адаптирована для альбомной ориентации</li>
-  <li>добавлно отображение даты изображения в гелерее</li>
+  <li>добавлено отображение даты изображения в гелерее</li>
   <li>добавлена история изменений</li>
 </ul>
 </body>
