* не закрывался байтовый стрим после сохранения изображения на SD * дописан пункт в список изменений

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -18,6 +18,7 @@
   <li>галерея адаптирована для альбомной ориентации</li>
   <li>добавлено отображение даты изображения в гелерее</li>
   <li>добавлена история изменений</li>
+  <li>оптимизирована работа с памятью</li>
 </ul>
 </body>
 </html>
