--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.6:</strong></p>
+<ul>
+  <li>исправлена ошибка масштабирования на планшетах</li>
+  <li>исправлена ошибка закгрузки обоев с Flickr.com</li>
+</ul>
 <p><strong>Версия 2.5:</strong></p>
 <ul>
   <li>добавлен новый источник обоев Eath Shots (обновление днем)</li>
