! версия 2.6 RC2 * опечатка в истории изменений

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -13,7 +13,7 @@
 <p><strong>Версия 2.6:</strong></p>
 <ul>
   <li>исправлена ошибка масштабирования на планшетах</li>
-  <li>исправлена ошибка закгрузки обоев с Flickr.com</li>
+  <li>исправлена ошибка загрузки обоев с Flickr.com</li>
 </ul>
 <p><strong>Версия 2.5:</strong></p>
 <ul>
