! версия 2.7 * забыл заполнить whatsnew.html

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.7:</strong></p>
+<ul>
+  <li>исправлена ошибка масштабирования при повороте экрана</li>
+</ul>
 <p><strong>Версия 2.6:</strong></p>
 <ul>
   <li>исправлена ошибка масштабирования на планшетах</li>
