* textMultiLine для правильного отображения на Android 2юЧ * галерея на полный экран с учетом текущей темы телефона + кнопка О программе для горизонтального положения в гелерее и для планшетов 7"

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.8:</strong></p>
+<ul>
+  <li>упрощен запуск живых обоев при первой установке приложения</li>
+  <li>улучшено качество изображений, загружаемых с сервиса fotki.yandex.ru</li>
+</ul>
 <p><strong>Версия 2.7:</strong></p>
 <ul>
   <li>исправлена ошибка масштабирования при повороте экрана</li>
