! версия 2.9 RC1 * изменен алгоритм проверки запущенности обоев и отображения фрейма запуска обоев в галерее + добавлена кнопка настроек в галерее

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.9:</strong></p>
+<ul>
+  <li>изменен механизм масштабирования для сохранения качества изображений/li>
+  <li>добавлена возможность открытия настроек из галереи</li>
+</ul>
 <p><strong>Версия 2.8:</strong></p>
 <ul>
   <li>упрощен запуск живых обоев при первой установке приложения</li>
