* ошибка в истории изменений

--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -12,7 +12,7 @@
 </ul>
 <p><strong>Версия 2.9:</strong></p>
 <ul>
-  <li>изменен механизм масштабирования для сохранения качества изображений/li>
+  <li>изменен механизм масштабирования для сохранения качества изображений</li>
   <li>добавлена возможность открытия настроек из галереи</li>
 </ul>
 <p><strong>Версия 2.8:</strong></p>
