+ английская локализация для HelpActivity

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -1,17 +1,17 @@
 ﻿<?xml version=\"1.0\" encoding=\"UTF-8\" ?>
 <html>
 <head>
-<title>О программе</title>
+<title>About</title>
 <link rel="stylesheet" href="../style.css" type="text/css"/>
 </head>
 <body>
 <ul class="navigation">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="whatsnew.html">История</a></li>
-    <li><a href="about.html">О программе</a></li>
+    <li><a href="index.html">Overview</a></li>
+    <li><a href="whatsnew.html">What's new</a></li>
+    <li><a href="about.html">About</a></li>
 </ul>
 <p style="text-align:center"><img src="../images/icon.png" alt="Photo of the day"></p>
-<font size="5"><p style="text-align:center">Фото дня 2.9</p></font>
-<font size="3"><p style="text-align:center">&#169 Храмов Евгений 2011-2013</p></font>
+<font size="5"><p style="text-align:center">Photo of the day 2.10</p></font>
+<font size="3"><p style="text-align:center">&#169 Hramov Evgeny 2011-2013</p></font>
 </body>
 </html>
