--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.10:</strong></p>
+<ul>
+  <li>добавлен новый источник обоев Bing</li>
+</ul>
 <p><strong>Версия 2.9:</strong></p>
 <ul>
   <li>изменен механизм масштабирования для сохранения качества изображений</li>
