* исправлено описание на английском

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -12,7 +12,7 @@
 </ul>
 <p><strong>Live wallapper:</strong></p>
 <p>Best photos from Flickr, Bing, National Geographic, Fotki.Yandex and other services will be Live wallpaper on your phone or tablet. Every day once an hour the program checks for new photos . If there is a new picture, it is downloaded and set as wallpaper. You can use widget to download photos you like on your device.</p>
-<p><strong>Wallpaper resources:</strong></p>
+<p><strong>Wallpaper sources:</strong></p>
 <ul>
   <li>Flickr</li>
   <li>Bing</li>
@@ -24,7 +24,7 @@
 <ul>
   <li>Open gallery saved images</li>
   <li>Save current wallaper image</li>
-  <li>Next wallaper resource</li>
+  <li>Next wallaper source</li>
   <li>Open settings</li>
 </ul>
 </body>
