--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 <ul class="navigation">
-    <li><a href="index.html">Main</a></li>
+    <li><a href="index.html">Overview</a></li>
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
 <p><strong>Version 2.10:</strong></p>
 <ul>
-  <li>New wallpaper resource - Bing</li>
+  <li>New wallpaper source - Bing</li>
   <li>English localization in history log</li>
 </ul>
 </body>
