--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -12,6 +12,6 @@
 </ul>
 <p style="text-align:center"><img src="../images/icon.png" alt="Photo of the day"></p>
 <font size="5"><p style="text-align:center">Photo of the day 2.10</p></font>
-<font size="3"><p style="text-align:center">&#169 Hramov Evgeny 2011-2013</p></font>
+<font size="3"><p style="text-align:center">&#169 Hramov Evgeniy 2011-2013</p></font>
 </body>
 </html>
