* исправление ошибки неработающего скролинга

--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -13,6 +13,7 @@
 <p><strong>Версия 2.10:</strong></p>
 <ul>
   <li>добавлен новый источник обоев Bing</li>
+  <li>исправлена ошибка неработающего скролинга обоев на прошивках со скролингом</li>
 </ul>
 <p><strong>Версия 2.9:</strong></p>
 <ul>
