--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -13,6 +13,7 @@
 <p><strong>Version 2.10:</strong></p>
 <ul>
   <li>New wallpaper source - Bing</li>
+  <li>Fixed bug with wallpaper scrollig</li>
   <li>English localization in history log</li>
 </ul>
 </body>
