! версия 2.11 * отключено центрирование по кнопке HOME

--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.11:</strong></p>
+<ul>
+  <li>исправлена ошибка установки виджета</li>
+</ul>
 <p><strong>Версия 2.10:</strong></p>
 <ul>
   <li>добавлен новый источник обоев Bing</li>
