--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
+<p><strong>Version 2.11:</strong></p>
+<ul>
+  <li>Fixed bug: installing widget</li>
+  <li>Minor bugs fixed</li>
+</ul>
 <p><strong>Version 2.10:</strong></p>
 <ul>
   <li>New wallpaper source - Bing</li>
