* инфо к новой версии

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -12,6 +12,7 @@
 </ul>
 <p><strong>Live wallapper:</strong></p>
 <p>Best photos from Flickr, Bing, National Geographic, Fotki.Yandex and other services will be Live wallpaper on your phone or tablet. Every day once an hour the program checks for new photos . If there is a new picture, it is downloaded and set as wallpaper. You can use widget to download photos you like on your device.</p>
+<p><strong>Beta:</strong> alternative scrolling mode on Samsung Galaxy SIII, Samsung Galaxy Note II, HTC One and other. Set this mode in application settings to use.</p>
 <p><strong>Wallpaper sources:</strong></p>
 <ul>
   <li>Flickr</li>
