* информация по версии 2.13

--- a/assets/html-ru/index.html
+++ b/assets/html-ru/index.html
@@ -21,6 +21,7 @@
   <li>National Geographic</li>
   <li>Earth Shots (обновление днем)</li>
   <li>Bing</li>
+  <li>DieselStation (автомобили)</li>
 </ul>
 <p><strong>Возможности виджета:</strong></p>
 <ul>
