--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.13:</strong></p>
+<ul>
+  <li>добавлен новый источник обоев DieselStation.com (автомобили)</li>
+</ul>
 <p><strong>Версия 2.12:</strong></p>
 <ul>
   <li>Альтернативный скролинг обоев (бета) - для моделей телефонов Samsung Galaxy SIII, Samsung Galaxy Note II, HTC One и т.п.. Для использования требуется включить режим в настройках приложения.</li>
