--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -20,6 +20,7 @@
   <li>Fokti.Yandex</li>
   <li>National Geographic</li>
   <li>Earth Shots</li>
+  <li>DieselStation (cars)</li>
 </ul>
 <p><strong>Widget:</strong></p>
 <ul>
