--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
+<p><strong>Version 2.13:</strong></p>
+<ul>
+  <li>New wallpaper source - DieselStation (cars)</li>
+</ul>
 <p><strong>Version 2.12:</strong></p>
 <ul>
   <li>Alternative scrolling wallpaper (beta) on Samsung Galaxy SIII, Samsung Galaxy Note II, HTC One and other. Set this mode in application settings to use.</li>
