* whatsnew по версии 2.13

--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -13,6 +13,8 @@
 <p><strong>Версия 2.13:</strong></p>
 <ul>
   <li>добавлен новый источник обоев DieselStation.com (автомобили)</li>
+  <li>добавлен новый источник обоев Wikipedia.org</li>
+  <li>добавлена возможность автоматической смены источника обоев каждый час</li>
 </ul>
 <p><strong>Версия 2.12:</strong></p>
 <ul>
