--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -21,6 +21,7 @@
   <li>National Geographic</li>
   <li>Earth Shots</li>
   <li>DieselStation (cars)</li>
+  <li>Wikipedia</li>
 </ul>
 <p><strong>Widget:</strong></p>
 <ul>
