--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -13,6 +13,8 @@
 <p><strong>Version 2.13:</strong></p>
 <ul>
   <li>New wallpaper source - DieselStation (cars)</li>
+  <li>New wallpaper source - Wikipedia</li>
+  <li>New preference - Wallpaper source change every hour</li>
 </ul>
 <p><strong>Version 2.12:</strong></p>
 <ul>
