--- a/assets/html-ru/index.html
+++ b/assets/html-ru/index.html
@@ -22,6 +22,7 @@
   <li>Earth Shots (обновление днем)</li>
   <li>Bing</li>
   <li>DieselStation (автомобили)</li>
+  <li>Wikipedia</li>
 </ul>
 <p><strong>Возможности виджета:</strong></p>
 <ul>
