+ what's new version 2.14

--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.14:</strong></p>
+<ul>
+  <li>Добавлена возможность указания числа виртуальных рабочих столов для альтернативного скроллинга.</li>
+  <li>Запуск автосмены источника обоев только при наличии доступа к интернету.</li>
+</ul>
 <p><strong>Версия 2.13:</strong></p>
 <ul>
   <li>добавлен новый источник обоев DieselStation.com (автомобили)</li>
