--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
+<p><strong>Version 2.14:</strong></p>
+<ul>
+  <li>New preference: virtual screens quantity for alternative scrolling</li>
+  <li>Wallpaper source autochange if the internet is accessed only</li>
+</ul>
 <p><strong>Version 2.13:</strong></p>
 <ul>
   <li>New wallpaper source - DieselStation (cars)</li>
