--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.15:</strong></p>
+<ul>
+  <li>Добавлена возможность настройки избранных источников обоев для режима автосмены.</li>
+  <li>Оптимизация работы приложения.</li>
+</ul>
 <p><strong>Версия 2.14:</strong></p>
 <ul>
   <li>Добавлена возможность указания числа виртуальных рабочих столов для альтернативного скроллинга.</li>
