--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,11 @@
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
+<p><strong>Version 2.16:</strong></p>
+<ul>
+  <li>Smooth scrolling gallery</li>
+  <li>Fixed bug: bad image quality on change orientation</li>
+</ul>
 <p><strong>Version 2.15:</strong></p>
 <ul>
   <li>New preference: favorites for source atuto change mode</li>
