--- a/assets/html-ru/whatsnew.html
+++ b/assets/html-ru/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">История</a></li>
     <li><a href="about.html">О программе</a></li>
 </ul>
+<p><strong>Версия 2.17:</strong></p>
+<ul>
+  <li>Исправлены ошибки источников обоев: Flikr, National Geographic, DieselStation.</li>
+</ul>
 <p><strong>Версия 2.16:</strong></p>
 <ul>
   <li>Плавная прокрутка галереи сохраненных изображений.</li>
