--- a/assets/html/whatsnew.html
+++ b/assets/html/whatsnew.html
@@ -10,6 +10,10 @@
     <li><a href="whatsnew.html">What's new</a></li>
     <li><a href="about.html">About</a></li>
 </ul>
+<p><strong>Version 2.17:</strong></p>
+<ul>
+  <li>Fixed sources: Flickr, National Geographic, DieselStation</li>
+</ul>
 <p><strong>Version 2.16:</strong></p>
 <ul>
   <li>Smooth scrolling gallery</li>
